Fixing Avatar container on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -300,7 +300,7 @@ div.avatar-container img:active {
   background: linear-gradient(
     to right, 
     rgba(8, 8, 8, 0.8) 0%,   /* 90% opaque */
-    rgba(18, 18, 18, 0.7) 100%  /* 95% opaque */
+    rgba(18, 18, 18, 0.8) 50%  /* 95% opaque */
   );
   box-shadow: 0 -50px 100px rgba(0,0,0, 0.8);
   padding: 10px 0 20px;
@@ -376,8 +376,13 @@ div.avatar-container img:active {
 }
 
 @media (max-width: 768px) {
+  div.avatar-container {
+    height: 500px;
+    width: 280px;
+  }
+
   div.avatar-container img {
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
   }
 }
